# excel2image

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  image2excel.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  config.yaml  publish.yml  pyre.yml
image2excel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: image2excel.py
src/image2excel/: __init__.py  cli.py  converter.py
src/image2excel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_converter.py
