[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image2excel"
version = "0.1.0"
description = "converts images to excel tables"
authors = [{ email = "michel.kluger@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "pillow",
    "matplotlib",
    "colormap",
]

[project.urls]
"Homepage" = "https://github.com/michelkluger/image2excel"
"Bug Tracker" = "https://github.com/michelkluger/image2excel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
ignore_missing_imports = true